--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>PasswordOrganizer</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "reset", "organizer", :media => :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<!--  def0fc -->
 <%= yield %>
 
 </body>
