background color is finally choosed

--- a/public/stylesheets/organizer.css
+++ b/public/stylesheets/organizer.css
@@ -1,3 +1,5 @@
 body{
-   backgroung-color: def0fc;
+/*   backgroung-color: def0fc; 
+   background-color: 171c15; */
+   background-color: #262c3a
 }
