--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>PasswordOrganizer</title>
-  <%= stylesheet_link_tag "reset", "organizer", :media => :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-<!--  def0fc -->
-<%= yield %>
-
-</body>
+  <head>
+    <title>PasswordOrganizer</title>
+    <%= stylesheet_link_tag "reset", "organizer", :media => :all %>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+  </head>
+  <body>
+    <div class="layout">
+      <!--  def0fc -->
+      <%= yield %>
+    </div>
+  </body>
 </html>
